# clipygo-plugin-relay

./: .gitignore  Cargo.toml  README.md  test_live.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
server/: Dockerfile  main.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_main.py
src/: main.rs
