[package]
name = "clipygo-plugin-relay"
version = "0.1.2"
edition = "2021"
description = "Encrypted clipboard relay plugin for clipygo"
authors = ["Georg Nelles"]
license = "MIT"
repository = "https://github.com/it-atelier-gn/clipygo-plugin-relay"

[[bin]]
name = "clipygo-plugin-relay"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
dirs = "6"
hex = "0.4"
futures-util = "0.3"
