[package]
name = "clipygo-plugin-relay"
version = "0.3.1"
edition = "2021"
description = "Encrypted clipboard relay plugin for clipygo"
authors = ["Georg Nelles"]
license = "MIT"
repository = "https://github.com/it-atelier-gn/clipygo-plugin-relay"

[[bin]]
name = "clipygo-plugin-relay"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.11"
hmac = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
dirs = "6"
hex = "0.4"
futures-util = "0.3"
